# rednet_public

./: .gitignore  5whj.cif  6foe.cif  LICENSE  README.md  pyproject.toml
assets/: selected_cluster_df.csv
cli/: anal_pipeline.py  fold_pipeline.py  infer_pipeline.py  make_select_data.py
configs/dataset/: pdb_pretrain.yaml  pdb_test.yaml
configs/eval/: crosstalk_routine.yaml  eval_fold.yaml  rosetta_routine.yaml
configs/filters/: rosetta.yaml  sel.yaml
configs/model/: rednet_pretrain_atom_gat_base.yaml  rednet_pretrain_atom_gat_sa.yaml
configs/sampling/: cd_a01_b03_t0001.yaml  cd_a01_b05_t0001.yaml  cd_a01_b07_t0001.yaml  cd_a01_b09_t0001.yaml  cd_a05_b03_t0001.yaml  cd_a05_b05_t0001.yaml  cd_a05_b07_t0001.yaml  cd_a05_b09_t0001.yaml  cd_a10_b07_t01.yaml  cd_a10_b09_t0001.yaml  cd_a1_b03_t0001.yaml  cd_a1_b05_t0001.yaml  cd_a1_b07_t0001.yaml  cd_a1_b07_t01.yaml  cd_a1_b09_t0001.yaml  cd_a2_b03_t0001.yaml  cd_a2_b05_t0001.yaml  cd_a2_b07_t0001.yaml  cd_a2_b07_t01.yaml  cd_a2_b09_t0001.yaml  t0001.yaml
configs/task/: rednet_task.yaml
configs/test_exptl/: hd_sc.yaml  megascale.yaml  pdb_sel.yaml  pdb_test.yaml  skempiv2.yaml
docs/: bindcraft.md  hdimer.csv  pdb_sel.csv  pdb_test.csv  skempi_m10.csv
notebooks/: plot.ipynb
notebooks/data/: RedNet.docx
scripts/: batch_run.sh  hdimer_workflow.sh  run_rosetta.sh  sel_workflow.sh
src/rednet/: __init__.py  atom_decoder.py  atom_encoder.py  atom_featurizer.py  atom_gat_model.py  aux_utils.py  ce_utils.py  common_utils.py  fatom_encoder.py  loss_utils.py  ops.py  rednet_model.py  residue_constants.py  (+2 more)
(+33 files in other folders)
